
2016-02-28  Edward Hart <edward.dan.hart@gmail.com>

	* config.def, config.c, reserved.c: added reserved and specify-all-
	  reserved options to let configs specify all the reserved words. Also
	  removed now redundant cobol85-reserved option.
	* reserved.c (default_reserved_word_list): removed unimplemented
	  COBOL-85 words.
	* reserved.c (cob_strcasecmp): removed assumption that second arg was
	  all caps.
	* cobc.c (process_command_line): moved cb_list_reserved call to after
	  the configuration has loaded.
	* cobc.h (noreserve): renamed to reserved_word_list.
	* tree.h (cobc_reserved): removed const qualifiers from members.

2016-02-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l (read_literal): Fix wrong error about max-literal length
	  when the last position is an escaped literal mark

2016-02-20  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (procedure_returning): fixed bug #203: emit error if function
	  returning item has ANY LENGTH clause.

2016-02-17  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (display_atom): prepare for DISPLAY OMITTED.
	* typeck.c (cb_emit_display): refactored.
	* typeck.c: added non-functional version of (cb_emit_display_omitted).

2016-02-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_expr_finish): tweak line number to match the error

2016-02-16  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: fixed bug #201 - where a specified UPON device was replaced
	  with the default.

2016-02-13  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: permit DISPLAY and ACCEPT clauses in any order.
	* parser.y: add optional WITH before every disp/accp_attr and optional
	  AT before each LINE/COL clause.
	* parser.y: allow the screen and device formats of the DISPLAY statement
	  to be mixed in one statement.

2016-02-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l (read_literal): Fix multiple heap corruptions